@@ -1,3 +1,7 @@
+2004-12-01  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/JLayeredPane.java: Reformatted.
+
 2004-11-30  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/tree/DefaultMutableTreeNode.java:
